# core

./: .clang-format  .gitignore  .gitlab-ci.yml  Api.md  CMakeLists.txt  Consensus.md  Dockerfile  LICENSE  Readme.md  block.0.bp  bot1.json  cppcheck_suppression.txt  data.0.testnet  install.sh  test_keys.pub  version.h.in
CMake/: FindGRPC.cmake
cmake/Hunter/: config.cmake
doc/: Doxyfile  architecture.md  status.md  technical_choices.md
keys/: key_0.priv  key_0.pub  key_1.priv  key_1.pub  key_2.priv  key_2.pub  key_3.priv  key_3.pub  key_4.priv  key_4.pub  key_5.priv  key_5.pub  key_6.priv  key_6.pub  key_7.priv  key_7.pub  key_8.priv  key_8.pub  key_9.priv  key_9.pub  key_faucet.priv  key_faucet.pub  key_faucet_save.priv  key_faucet_save.pub
src/: Bot.cpp  Bot.hpp  CMakeLists.txt  main.cpp  main_test.cpp
src/api/: Api.cpp  Api.hpp  GRPC.cpp  GRPC.hpp  Monitoring.cpp  Monitoring.h  Monitoring.hpp  Rest.cpp  Rest.hpp
src/api/grpc/: Block.cpp  Block.hpp  Status.cpp  Status.hpp  Transaction.cpp  Transaction.hpp
src/common/: Buffer.cpp  Buffer.hpp  Queue.hpp  Watcher.hpp  WorkerQueue.hpp  check.hpp  logger.cpp  logger.hpp  types.cpp  types.hpp
src/configs/: bot.json.in
src/consensus/: Config.hpp  Consensus.cpp  Consensus.h  Consensus.hpp  ForkManager.cpp  ForkManager.hpp  ForkSus.cpp  ForkSus.h  ForkTree.cpp  ForkTree.hpp  Forkmanager.cpp  Forkmanager.hpp  Forktree.cpp  Forktree.hpp  Integrities.cpp  Integrities.hpp  Integrity.hpp  Pii.cpp  Pii.h  Pii.hpp  PiiConsensus.cpp  PiiConsensus.hpp  PiiSus.cpp  PiiSus.h  TransactionPool.cpp  TransactionPool.hpp
src/crypto/: Ecc.cpp  Ecc.hpp  EccPriv.cpp  EccPriv.hpp  EccPub.cpp  EccPub.hpp  Hash.cpp  Hash.hpp  KeyPriv.cpp  KeyPriv.hpp  KeyPub.cpp  KeyPub.hpp  Sign.cpp  Sign.hpp
src/ledger/: Filter.hpp  Ledger.hpp  LedgerMongodb.cpp  LedgerMongodb.hpp  Parser.hpp  Transaction.cpp  Transaction.hpp  Wallet.hpp  mongo.hpp
src/messages/: Address.cpp  Address.hpp  CMakeLists.txt  Hasher.hpp  Message.cpp  Message.hpp  NCCAmount.hpp  Peer.cpp  Peer.hpp  Peers.cpp  Peers.hpp  Queue.cpp  Queue.hpp  Subscriber.hpp  TaggedTransaction.cpp  TaggedTransaction.hpp  common.proto  config.proto  consensus.proto  messages.proto  networking.proto  pii.proto  rest.proto  service.proto
src/messages/config/: Config.cpp  Config.hpp  Database.hpp
src/mongo/: mongo.hpp
src/networking/: Connection.cpp  Connection.hpp  Networking.cpp  Networking.hpp  Peer.cpp  Peer.hpp  PeerPool.cpp  PeerPool.hpp  TransportLayer.cpp  TransportLayer.hpp
src/networking/tcp/: Client.hpp  Connection.cpp  Connection.hpp  HeaderPattern.hpp  InboundConnection.cpp  InboundConnection.hpp  OutboundConnection.cpp  OutboundConnection.hpp  Tcp.cpp  Tcp.cpp.orig  Tcp.hpp  Tcp.hpp.orig
src/rest/: Readme.md  Rest.cpp  Rest.hpp  Wallet.hpp  rest.cpp
src/tooling/: FullSimulator.cpp  FullSimulator.hpp  RealtimeSimulator.hpp  Showkey.cpp  Showkey.cpp.orig  Simulator.cpp  Simulator.hpp  blockg.cpp  blockgen.cpp  blockgen.hpp  cli.cpp  cli.hpp  coinbase.cpp  confgen.cpp  genblock.hpp  grpcclient.cpp  holes.cpp  keygen.cpp  list.cpp  show_block0.cpp  showhole.cpp  transaction.cpp  wallet.cpp
testnet/: b0.json  b1.json  b2.json  bot.json  bot2.json  bot_faucet.json  bot_generic.json  bot_local.json.in  bot_wallet.json  data.0.testnet  key0.pub  key1.pub  key2.pub  key51.pub  key52.pub  key_faucet.pub  key_faucet_save.pub  start_bots.py
tests/: CMakeLists.txt  Conf.cpp  FullSimulator.cpp  block0.cpp  blocks19.cpp  dbreset.cpp  integration.cpp  piitest.cpp
tests/api/: GRPC.cpp  Rest.cpp
tests/common/: Buffer.cpp
tests/configs/: bot.json.in  bot0.json  bot0.json.in  bot0.peers.json  bot1.json  bot1.json.in  bot1.peers.json  bot2.json  bot2.json.in  bot2.peers.json  bot_block0.json  bot_outsider.40-38.39.json  bot_outsider.41-38.39.json  bot_outsider.42-38.39.json  bot_outsider.50-37.json  bot_outsider.51-37.json  bot_outsider.52-37.json  bot_outsider.52-37.peers.json  data.0.testnet  gen.sh  integration_keepmax0.json  integration_keepmax0.json.in  integration_keepmax1.json  integration_keepmax1.json.in  integration_keepmax1.peers.json  integration_keepmax2.json  integration_keepmax2.json.in  integration_propagation0.json  integration_propagation0.json.in  integration_propagation1.json  integration_propagation1.json.in  integration_propagation2.json  integration_propagation2.json.in  integration_propagation40.json.in  integration_propagation41.json.in  integration_propagation50.json.in  integration_propagation51.json.in  integration_propagation52.json.in  integration_update0.json  integration_update0.json.in  (+31 more)
tests/consensus/: Consensus.cpp  ForkManager.cpp  Pii.cpp  RealtimeConsensus.cpp
tests/crypto/: Ecc.cpp  Hash.cpp  Sign.cpp
tests/ledger/: LedgerMongodb.cpp
tests/messages/: Address.cpp  Config.cpp  Messages.cpp  Peers.cpp  Queue.cpp  Subscriber.cpp
tests/networking/: TransportLayer.cpp
tests/networking/tcp/: Connection.cpp  Tcp.cpp
tests/tooling/: FullSimulator.cpp  RealtimeSimulator.cpp  Simulator.cpp
utils/: blocks_graph.ipynb  cli.py  poc.ipynb
utils/dockers/: Dockerfile.block  Dockerfile.core  Dockerfile.debian  Dockerfile.faucet  Dockerfile.fedora  Dockerfile.nginx  Dockerfile.test  Dockerfile.ubuntu  Dockerfile.ubuntu-release  Dockerfile.wallet  build.sh  entrypoint.sh  mongo_update.sh  times3.py
utils/simulator/: simulate.py
